# SEC-SemanticSearch

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  Untitled-1.ipynb  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  sec_semantic_search.ipynb
.github/workflows/: ci.yml  deploy.yml
cloud/: api-service.yaml  demo-reset-job.yaml  frontend-service.yaml
frontend/: next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/__tests__/: Dashboard.test.tsx  Search.test.tsx
frontend/src/app/api/admin/filings/: route.ts
frontend/src/app/filings/: page.tsx
frontend/src/app/ingest/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/dashboard/: DashboardMetrics.tsx  DashboardSkeleton.tsx  FormChart.tsx  TickerTable.tsx  index.ts
frontend/src/components/filings/: BulkActions.tsx  DeleteDialog.tsx  FilingFilters.tsx  FilingTable.tsx  FilingTableSkeleton.tsx  index.ts
frontend/src/components/filings/__tests__/: FilingTable.test.tsx
frontend/src/components/ingest/: IngestForm.tsx  IngestSummary.tsx  ProgressTracker.tsx  index.ts
frontend/src/components/ingest/__tests__/: IngestForm.test.tsx
frontend/src/components/layout/: DemoBanner.tsx  Footer.tsx  Navbar.tsx  ThemeProvider.tsx  WelcomeGate.tsx  index.ts
frontend/src/components/layout/__tests__/: DemoBanner.test.tsx  Navbar.test.tsx  WelcomeGate.test.tsx
frontend/src/components/search/: FilingInventory.tsx  ResultCard.tsx  ResultList.tsx  SearchBar.tsx  SearchFilters.tsx  SearchResultSkeleton.tsx  SuggestedQueries.tsx  index.ts
frontend/src/components/search/__tests__/: SearchFilters.test.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  EmptyState.tsx  MetricCard.tsx  Modal.tsx  SimilarityBadge.tsx  Skeleton.tsx  Spinner.tsx  Toast.tsx  index.ts
frontend/src/components/ui/__tests__/: Badge.test.tsx  Button.test.tsx  EmptyState.test.tsx  MetricCard.test.tsx  Modal.test.tsx  SimilarityBadge.test.tsx  Spinner.test.tsx  Toast.test.tsx
frontend/src/hooks/: useAdminSession.ts  useEdgarSession.ts  useFilings.ts  useIngest.ts  useSearch.ts  useStatus.ts
frontend/src/hooks/__tests__/: useAdminSession.test.tsx  useEdgarSession.test.ts  useFilings.test.tsx  useIngestReducer.test.ts  useSearch.test.tsx  useStatus.test.tsx
frontend/src/lib/: adminAuth.ts  api.ts  types.ts  websocket.ts
frontend/src/lib/__tests__/: adminAuth.test.ts  extractApiError.test.ts  websocket.test.ts
frontend/src/test/: setup.ts  utils.tsx
notebooks/: sec_semantic_search.ipynb
scripts/: demo-reset.sh  gcloud-deploy.sh  gcloud-setup-secrets.sh  test-docker-secrets.sh
src/sec_semantic_search/: __init__.py  __main__.py
src/sec_semantic_search/api/: __init__.py  app.py  dependencies.py  rate_limit.py  run.py  schemas.py  tasks.py  websocket.py
src/sec_semantic_search/api/routes/: __init__.py  filings.py  ingest.py  resources.py  search.py  status.py
src/sec_semantic_search/cli/: __init__.py  ingest.py  main.py  manage.py  search.py
src/sec_semantic_search/config/: __init__.py  constants.py  settings.py
src/sec_semantic_search/core/: __init__.py  exceptions.py  logging.py  types.py
src/sec_semantic_search/database/: __init__.py  client.py  metadata.py
src/sec_semantic_search/pipeline/: __init__.py  chunk.py  embed.py  fetch.py  orchestrator.py  parse.py
src/sec_semantic_search/search/: __init__.py  engine.py
src/sec_semantic_search/web/: __init__.py  _shared.py  app.py  run.py
src/sec_semantic_search/web/pages/: dashboard.py  filings.py  ingest.py  search.py
src/sec_semantic_search/web_deprecated/: app.py
src/sec_semantic_search/web_deprecated/pages/: __init__.py  dashboard.py  filings.py  ingest.py  search.py
tests/: conftest.py  helpers.py
tests/api/: conftest.py
tests/api/integration/: test_access_control.py  test_edgar_session.py  test_filings.py  test_ingest.py  test_resources.py  test_search.py  test_security.py  test_status.py  test_w5_verification.py  test_websocket.py
tests/api/unit/: test_demo_eviction.py  test_schemas.py  test_schemas_extended.py  test_task_manager.py  test_task_manager_worker.py
tests/deprecated/: test_web_deprecated.py
tests/integration/: test_cli.py  test_pipeline.py  test_search.py
tests/unit/: test_chromadb_migration_flag.py  test_chunk.py  test_clear_all.py  test_cloud_config.py  test_config.py  test_database_client.py  test_database_metadata.py  test_embed.py  test_embed_gpu.py  test_exceptions.py  test_fetch.py  test_github_workflows.py  test_logging.py  test_optimisations.py  test_orchestrator.py  test_package.py  test_parse.py  test_search_engine.py  test_sqlcipher_integration.py  test_task_history_privacy.py  test_types.py  test_web.py
(+3 files in other folders)
