[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-semantic-search"
version = "0.1.0"
description = "A semantic search system for SEC filings (10-K, 10-Q)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Eren Yanic" },
]
keywords = ["sec", "edgar", "semantic-search", "embeddings", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    # SEC filing retrieval
    "edgartools==5.24.0",

    # HTML parsing
    "doc2dict==0.7.1",

    # Embeddings and ML
    "sentence-transformers==5.2.2",
    "torch>=2.10.0",  # not pinned exactly — local CUDA build suffix varies

    # Vector database
    "chromadb==1.5.2",

    # REST API
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "websockets==16.0",

    # CLI framework
    "typer==0.24.1",
    "rich==14.3.3",

    # Configuration
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
encryption = [
    "pysqlcipher3==1.2.1",
]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "ruff==0.15.5",
    "mypy==1.19.1",
]

[project.scripts]
sec-search = "sec_semantic_search.cli.main:app"
sec-search-api = "sec_semantic_search.api.run:main"

[project.urls]
Homepage = "https://github.com/ErenYanic"
Repository = "https://github.com/ErenYanic/SEC-SemanticSearch"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_semantic_search"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["sec_semantic_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
